# lithub

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  init_database.sql  package-lock.json  pyproject.toml  requirements_dev.txt
.config/: default.env  hypercorn.toml  logging.json  logging.toml
.data/: README.md
backend/: main.py  requirements.txt  requirements_dev.txt
backend/server/: __main__.py  config.py  datasets.py  logging.py  mails.py  middlewares.py  types.py  util.py
backend/server/api/: __init__.py  basic.py  dataset.py
backend/server/cache/: README.md  __init__.py  backends.py  coders.py  key_builders.py
converter/: binarise.py  extract_geo.py  geonames.py  iso31661.py  kmeans_keywords.py  project.py  requirements.txt  transform_pim.py  transform_sqlite.py  tyler.py  write.py
converter/carbonpricing/: info.py  keywords.py  label_map.json  schema_flat.py  transform.py  transform_quadtree.py
converter/cdrmap/: geocodes.py  info.py  keywords.py  transform.py
converter/healthmap/: info.py  keywords.py  transform_feather.py
converter/policymap/: geocodes_pim.py  info.py  keywords_pim.py  transform_pim.py
frontend/: .editorconfig  .env.development  .eslintrc.cjs  .gitlab-ci.yml  .prettierrc.json  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  prettierrc.json  tsconfig.config.json  tsconfig.json  vite.config.ts
frontend-old/: .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
frontend-old/src/: App.vue
frontend-old/src/components/: DocItem.vue
frontend-old/src/router/: index.ts
frontend-old/src/views/: HomeView.vue  ScatterViewDSInt.vue  ScatterViewHathi.vue
frontend/public/: countries-50m-named.json  world-110m-named.json
frontend/src/: App.vue  main.ts  style.css  style.scss
frontend/src/assets/: font-lato.css  main.css
frontend/src/components/: AnnotatedDocItem.vue  DocItem.vue  DocumentCard.vue  DownloadControl.vue  FluidContainer.vue  FluidContainerGrid.vue  GeoMap.old.vue  GeoMap.vue  HeatMap.vue  HistogramFilter.vue  InclusiveIcon.vue  InfoCard.vue  PaginationNav.vue  ReportingModal.vue  Scatter.vue  ScatterComponent.vue  ScatterLandscape.vue  SidebarLabelFilter.vue  SidebarLabelFilterGroup.vue  SidebarSearchFilter.vue  SunburstDiagram.vue  TestComp.vue  ToggleIcon.vue  ToolTip.vue  TopicEntry.vue
frontend/src/router/: index.ts
frontend/src/stores/: apistore.ts  datasetstore.ts  index.ts
frontend/src/util/: api.ts  color-legend.ts  dataset.ts  events.ts  geo.ts  index.ts  lasso.d.ts  lasso.js  lasso.ts  types.d.ts
frontend/src/views/: AboutView.vue  DataView.vue  LandingView.vue  PrivacyView.vue  ScatterThreeView.vue  ScatterTwoView.vue  ScatterView.vue
server/: app.py  requirements.txt  requirements_dev.txt  server.py
server/api/: __init__.py  data.py  datasets.py  ping.py  points.py  tiles.py
server/utils/: config.py  datasets.py  logging.py  middlewares.py  sqlite.py  types.py
(+105 files in other folders)
