[project]
name = "literature-hub"
version = "1.0.3"
description = "Backend for climateliterature.org"
author = "Tim Repke / ECS@PIK"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.12.5",
    "pydantic_settings==2.12.0",
    "sqlalchemy==2.0.45",
]

[project.optional-dependencies]
server = [
    "fastapi==0.125.0",
    "uvicorn==0.38.0",
    "hypercorn==0.18.0",
    "aiofiles==25.1.0",
    "pyarrow==22.0.0",
    "aiosmtplib==5.0.0",
]

converter = [
    "pandas[excel]==2.3.3",
    "typer==0.20.0",
    "opentsne==1.0.4",
    "numpy==2.3.5",
]
[dependency-groups]
dev = [
    "ruff==0.14.9",
    "mypy==1.19.1",
]

[tool.ruff]
line-length = 160
indent-width = 4
target-version = "py313"
include = ["pyproject.toml", "backend/**/*.py"]  # , "converter/**/*.py"
exclude = []

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9"]
ignore = ["E203", "E501", "E712", "E741", "B010", "B009", "B904", "C403", "C416", "E722"]  # , "E126", "W503",

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 15

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
follow_imports = "silent"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
strict_optional = true
explicit_package_bases = false
show_traceback = true
incremental = false

files = ["backend/"]
exclude = []

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
